--- a/ReservationApiCRUD/appsettings.json
+++ b/ReservationApiCRUD/appsettings.json
@@ -7,9 +7,9 @@
     }
   },
   "Jwt": {
-    "Key": "ForTheLoveOfGodStoreAndLoadThisSecurely",
-    "Issuer": "https://id.nickchapsas.com",
-    "Audience": "http://movies.nickchapsas.com"
+    "Key": "MynameisJamesBond0007_MynameisJamesBond007",
+    "Issuer": "https://www.yogihosting.com",
+    "Audience": "dotnetclient"
   },
   "AllowedHosts": "*"
 }
